--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"  http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
+    <meta charset="UTF-8" />
+    
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KCX</title>
   </head>
   <body>
     <div id="app"></div>
+    <script type="module" src="./meta.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
