--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -7,7 +7,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<script type="module" src="./meta.js"></script>
+		<script type="module" src="%sveltekit%/meta.js"></script>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
