--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,12 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta
+		  http-equiv="Content-Security-Policy"
+		  content="upgrade-insecure-requests"
+		/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<script type="module" src="%sveltekit%/meta.js"></script>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
