Correctly applying meta.js configuration
Selectively apply TLS/SSL meta tag according to the env (Refer to the commit #086e27f, which was incorrect of loading a JavaScript file in Sveltekit)

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,10 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta
-		  http-equiv="Content-Security-Policy"
-		  content="upgrade-insecure-requests"
-		/>
+		<script src="%sveltekit.assets%/scripts/meta.js" defer></script>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
